index.css
/* WhatsApp Floating Button Styles */
.whatsapp-float {
  position: fixed;
  bottom: 40px;
  right: 40px;
  background-color: #25d366;
  color: #FFF;
  border-radius: 50px;
  box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.4);
  z-index: 1000;
  display: flex;
  align-items: center;
  text-decoration: none;
  transition: all 0.3s ease;
  padding: 15px 20px;
  gap: 12px;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
}

.whatsapp-float:hover {
  background-color: #128C7E;
  color: #FFF;
  transform: scale(1.05);
  box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
}

.whatsapp-float i {
  font-size: 24px;
  flex-shrink: 0;
}

.whatsapp-text {
  font-weight: 600;
  font-size: 14px;
  line-height: 1.2;
}

/* Mobile optimization */
@media (max-width: 575px) {
  .whatsapp-float {
    bottom: 20px;
    right: 20px;
    padding: 12px 16px;
    gap: 10px;
  }

  .whatsapp-float i {
    font-size: 20px;
  }

  .whatsapp-text {
    font-size: 12px;
  }
}

.u-section-1 .u-sheet-1 {
  min-height: 749px;
}

.u-section-1 .u-layout-wrap-1 {
  margin-top: 58px;
  margin-bottom: 31px;
}

.u-section-1 .u-layout-cell-1 {
  min-height: 692px;
  --animation-custom_in-translate_x: -300px;
  --animation-custom_in-translate_y: 0px;
  --animation-custom_in-opacity: 0;
  --animation-custom_in-rotate: 0deg;
  --animation-custom_in-scale: 1;
}

.u-section-1 .u-container-layout-1 {
  padding: 35px 50px 35px 0;
}

.u-section-1 .u-text-1 {
  font-size: 2.9375rem;
  margin: 126px 0 0;
}

.u-section-1 .u-btn-1 {
  text-transform: uppercase;
  font-size: 1rem;
  letter-spacing: 1px;
  background-image: none;
  font-weight: 700;
  --hover-color-var: #ffc900;
  margin: 39px auto 0 0;
  padding: 19px 18px 19px 17px;
}

.u-section-1 .u-icon-1 {
  font-size: 1rem;
  margin-left: 0;
  vertical-align: -1px;
}

.u-section-1 .u-layout-cell-2 {
  min-height: 692px;
  --animation-custom_in-translate_x: 300px;
  --animation-custom_in-translate_y: 0px;
  --animation-custom_in-opacity: 0;
  --animation-custom_in-rotate: 0deg;
  --animation-custom_in-scale: 1;
}

.u-section-1 .u-container-layout-2 {
  padding: 0;
}

.u-section-1 .u-shape-1 {
  width: 407px;
  height: 574px;
  animation-timing-function: ease-in-out;
  --animation-custom_in-translate_x: -200px;
  --animation-custom_in-translate_y: 0px;
  --animation-custom_in-opacity: 0;
  --animation-custom_in-rotate: 0deg;
  --animation-custom_in-scale: 1;
  margin: 0 0 0 auto;
}

.u-section-1 .u-image-1 {
  width: 469px;
  height: 531px;
  object-position: 50% 50%;
  animation-timing-function: ease-in-out;
  --animation-custom_in-translate_x: 0px;
  --animation-custom_in-translate_y: 0px;
  --animation-custom_in-opacity: 0;
  --animation-custom_in-rotate: 0deg;
  --animation-custom_in-scale: 1;
  margin: -454px auto 0 21px;
}

@media (max-width: 1199px) {
  .u-section-1 .u-sheet-1 {
    min-height: 572px;
  }

  .u-section-1 .u-layout-cell-1 {
    min-height: 571px;
  }

  .u-section-1 .u-layout-cell-2 {
    min-height: 650px;
  }

  .u-section-1 .u-shape-1 {
    margin-top: 113px;
  }
}

@media (max-width: 991px) {
  .u-section-1 .u-sheet-1 {
    min-height: 198px;
  }

  .u-section-1 .u-layout-cell-1 {
    min-height: 347px;
  }

  .u-section-1 .u-container-layout-1 {
    padding-top: 30px;
    padding-right: 30px;
    padding-bottom: 30px;
  }

  .u-section-1 .u-text-1 {
    width: auto;
    margin-top: 19px;
  }

  .u-section-1 .u-btn-1 {
    margin-top: 34px;
  }

  .u-section-1 .u-layout-cell-2 {
    min-height: 750px;
  }

  .u-section-1 .u-shape-1 {
    width: 258px;
    margin-left: 105px;
  }
}

@media (max-width: 767px) {
  .u-section-1 .u-sheet-1 {
    min-height: 298px;
  }

  .u-section-1 .u-layout-cell-1 {
    min-height: 100px;
  }

  .u-section-1 .u-container-layout-1 {
    padding-right: 10px;
  }

  .u-section-1 .u-text-1 {
    font-size: 2.25rem;
  }

  .u-section-1 .u-layout-cell-2 {
    min-height: 563px;
  }

  .u-section-1 .u-shape-1 {
    width: 235px;
    height: 348px;
    margin-top: 119px;
    margin-left: 60px;
  }

  .u-section-1 .u-image-1 {
    width: 241px;
    height: 386px;
    margin-top: -286px;
  }
}

@media (max-width: 575px) {
  .u-section-1 .u-sheet-1 {
    min-height: 661px;
  }

  .u-section-1 .u-layout-wrap-1 {
    margin-top: 0;
    margin-bottom: 40px;
  }

  .u-section-1 .u-layout-cell-1 {
    min-height: 215px;
  }

  .u-section-1 .u-container-layout-1 {
    padding-top: 24px;
    padding-right: 0;
  }

  .u-section-1 .u-text-1 {
    font-size: 1.875rem;
    margin-top: 2px;
    margin-left: 5px;
    margin-right: 5px;
  }

  .u-section-1 .u-btn-1 {
    margin-top: 31px;
  }

  .u-section-1 .u-layout-cell-2 {
    min-height: 402px;
  }

  .u-section-1 .u-shape-1 {
    width: 216px;
    height: 185px;
    margin-top: 0;
    margin-right: 30px;
    margin-left: 94px;
  }

  .u-section-1 .u-image-1 {
    margin-top: -144px;
    margin-bottom: -21px;
    margin-left: 0;
  }
} .u-section-2 {
  background-image: none;
}

.u-section-2 .u-sheet-1 {
  min-height: 717px;
}

.u-section-2 .u-list-1 {
  grid-template-rows: repeat(1, auto);
  margin-top: 60px;
  margin-bottom: 60px;
}

.u-section-2 .u-repeater-1 {
  grid-template-columns: repeat(3, 33.3333%);
  min-height: 598px;
  grid-auto-columns: 33.3333%;
  --gap: 0px;
}

.u-section-2 .u-list-item-1 {
  --animation-custom_in-translate_x: 0px;
  --animation-custom_in-translate_y: 0px;
  --animation-custom_in-opacity: 0;
  --animation-custom_in-rotate: 0deg;
  --animation-custom_in-scale: 0.3;
  --radius: 10px;
  margin-top: 0;
  margin-bottom: 0;
}

.u-section-2 .u-container-layout-1 {
  padding: 30px 20px;
}

.u-section-2 .u-icon-1 {
  width: 81px;
  height: 81px;
  margin: -5px auto 0;
}

.u-section-2 .u-text-1 {
  margin: 20px 0 0;
}

.u-section-2 .u-text-2 {
  margin: 20px 0 0;
}
/* ... */

